--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ select = ["E", "F", "I", "B", "UP"]
 ignore = []
 
 [tool.pytest.ini_options]
+pythonpath = ["src"]
 testpaths = ["tests"]
 addopts = "-q"
